--- a/下拉菜单.html
+++ b/下拉菜单.html
@@ -64,7 +64,8 @@ $(document).ready(function(){
 $(".top").hover(
 //鼠标移上去的方法
 function(){
-$(".top ul").eq($(this).index()).show(500); //.eq($(this).index()) 这句起到了遍历的作用
+$(".top ul").eq($(this).index()).show(500); /*.eq($(this).index()) 这句起到了遍历的作用,使其对应子下拉内容显示，改变 show() 为 slideDown() 等效果可以
+改变其出现效果*/
 },
 //鼠标移开的方法
 function(){
