--- a/JQ增加DOM元素并实现按钮控制.html
+++ b/JQ增加DOM元素并实现按钮控制.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>弹出层</title>
+    <title>JQ创建DOM并联结</title>
     <script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js" charset="utf-8"></script>
 </head>
 <style media="screen">
