--- a/Tab.html
+++ b/Tab.html
@@ -30,7 +30,7 @@ $(document).ready(function(){
 	$(".box").hide().eq($(this).index()).show();
         //另一种方法: $("box").eq($(".tab li").index(this)).addClass("on").siblings().removeClass('on'); 
 		//我的方法
-	$(this).addClass("to_m2ul1_cur");
+	$(this).addClass("cur");
         $(".tab li").not(this).each(function(index, el) {
             $(this).removeClass('cur');
         });
