--- a/页面锚点.html
+++ b/页面锚点.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>锚点</title>
+    <title>缓动锚点</title>
     <script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
     <style>
         body{height: 2500px;}
