--- a/页面锚点.html
+++ b/页面锚点.html
@@ -9,8 +9,9 @@
         *{margin: 0; padding: 0;}
         .aa{width: 1000px; min-height: 800px; margin: 0 auto;}
         .aa li{list-style: none; width: 100%; height: 300px; line-height: 300px; background: red; margin-bottom: 30px; text-align: center; font-size: 50px; color: #fff;}
-        .bb{width: 50px; min-height: 200px; position: fixed; top: 0; right: 200px; list-style: none;}
+        .bb{width: 50px; min-height: 200px; position: fixed; top: 0; left: 50%; margin-left: 510px; list-style: none;}
         .bb li{width: 100%; height: 50px; background: blue; margin-bottom: 10px; text-align: center; font-size: 20px; line-height: 50px; color: #fff;}
+	
     </style>
 </head>
 <body>
